--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -304,6 +304,41 @@ video {
     max-width: 710px;
 }
 
+.mockupGIFContainer {
+    position: relative;
+    height: auto;
+
+    img {
+        margin: 0;
+    }
+
+    .mockupGIF {
+        position: absolute;
+        //height: 92.69%;
+        height: 92%;
+        //width: 24.2%;
+        width: 24.9%;
+        left: 72.94%;
+        top: 3.34%;
+        border-radius: 17px;
+        box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+        //border-radius: 10%;
+        margin: 0;
+        overflow: hidden;
+
+        opacity: 1;
+
+        img {
+            position: relative;
+            height: 100%;
+            width: 100%;
+            //object-fit: cover;
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+
 
 
 
